--- a/docs/package.json
+++ b/docs/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tailer",
   "version": "0.0.1",
-  "description": "teratailを使用する際の非公式マニュアル",
+  "description": "teratailを使用する際の非公式ガイドブック",
   "main": "index.js",
   "authors": {
     "name": "kai0310",
     "email": "kn0310@outlook.jp"
   },
-  "repository": "kai0310/tailer/tailer",
+  "repository": "kai0310/tailer",
   "scripts": {
     "dev": "vuepress dev src",
     "build": "vuepress build src"
